[package]
edition = "2021"
name = "esl"
version = "0.11.1"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "A library for reading, writing and processing ESM/ESP/ESS files."
readme = "README.md"
documentation = "https://docs.rs/esl/"
keywords = ["esm", "esp", "ess", "mw", "serde"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/esl"

[dependencies]
base64 = "0.13.0"
bitflags = "1.3.2"
byteorder = "1.4.3"
educe = "0.4.19"
either = { version = "1.7.0", features = ["serde"] }
encoding = "0.2.33"
enum-derive-2018 = "2.0.1"
enumn = "0.1.4"
flate2 = "1.0.24"
macro-attr-2018 = "2.1.2"
nameof = "1.2.2"
nom = "7.1.1"
serde = { version = "1.0.147", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.9"

[badges]
maintenance = { status = "actively-developed" }
