[package]
edition = "2021"
name = "esl"
version = "0.16.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "A library for reading, writing and processing ESM/ESP/ESS files."
readme = "README.md"
documentation = "https://docs.rs/esl/"
keywords = ["esm", "esp", "ess", "mw", "serde"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/esl"

[dependencies]
base64 = "0.20.0"
bitflags = "1.3.2"
byteorder = "1.4.3"
educe = "0.4.19"
either = { version = "1.7.0", features = ["serde"] }
encoding = "0.2.33"
enum-derive-2018 = "2.0.1"
enumn = "0.1.4"
flate2 = "1.0.24"
iter-identify_first_last = "0.0.1"
macro-attr-2018 = "2.1.2"
nameof = "1.2.2"
nom = "7.1.1"
nom-errors = "0.0.12"
phantom-type = "0.4.2"
serde = { version = "1.0.147", features = ["derive"] }
serde-serialize-seed = "0.0.8"
utf8-chars = "2.0.2"

[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_yaml = "0.9.9"

[badges]
maintenance = { status = "actively-developed" }
