[package]
edition = "2021"
name = "esl"
version = "0.19.2"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "A library for reading, writing and processing ESM/ESP/ESS files."
readme = "README.md"
documentation = "https://docs.rs/esl/"
keywords = ["esm", "esp", "ess", "mw", "serde"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/esl"

[dependencies]
base64 = "0.22.1"
bitflags = "2.4.0"
byteorder = "1.4.3"
educe = "0.6.0"
either = { version = "1.7.0", features = ["serde"] }
encoding = "0.2.33"
enum-derive-2018 = "3.0.1"
enumn = "0.1.4"
flate2 = "1.0.24"
iter-identify_first_last = "0.2.0"
macro-attr-2018 = "3.0.0"
nameof = "1.2.2"
nom = "7.1.1"
nom-errors = "0.0.13"
phantom-type = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-serialize-seed = "0.0.10"
serde_tagged = "0.3.0"
utf8-chars = "3.0.1"

[build-dependencies]
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_yaml = "0.9.9"

[badges]
maintenance = { status = "actively-developed" }
