name:                esp-assembler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/esp-assembler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Error.Extensions
                     , Data.Tes3
                     , Data.Tes3.Native
                     , Data.Tes3.Disassembler
                     , Data.Tes3.Disassembler.Native
                     , Data.Tes3.Get
                     , Data.Tes3.Get.Native
                     , Data.Tes3.Utils
                     , Data.Tes3.Utils.Native
                     , Data.Tes3.Parser
                     , Data.Tes3.Parser.Native
                     , Data.Tes3.Assembler
                     , Data.Tes3.Assembler.Native
                     , Espa.Cli
                     , Espa.Cli.Native
  other-modules:       Paths_esp_assembler
  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , bytestring
                     , errors
                     , transformers
                     , containers
                     , binary
                     , monad-loops
                     , split
                     , utility-ht
                     , semigroups
                     , binary-ext
                     , iconv
                     , utf8-string
                     , base64-bytestring
                     , attoparsec
                     , text
                     , mono-traversable
                     , conduit
                     , conduit-combinators
                     , directory
                     , data-binary-ieee754
                     , zlib
  default-language:    Haskell2010

executable espa
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , esp-assembler
  default-language:    Haskell2010

test-suite esp-assembler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Tes3.Utils.Spec
                     , Data.Tes3.Spec
                     , Data.Tes3.Get.Spec
                     , Data.Tes3.Parser.Spec
  build-depends:       base
                     , esp-assembler
                     , bytestring
                     , transformers
                     , errors
                     , HUnit
                     , MissingH
                     , containers
                     , monad-loops
                     , split
                     , utility-ht
                     , binary
                     , semigroups
                     , binary-ext
                     , iconv
                     , utf8-string
                     , base64-bytestring
                     , attoparsec
                     , text
                     , mono-traversable
                     , conduit
                     , conduit-combinators
                     , directory
                     , data-binary-ieee754
                     , zlib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:A1-Triard/esp-assembler.git
