name:                tes3
version:             0.7.7
synopsis:            A library for reading, writing and processing ESM/ESP/ESS files.
description:         A library for reading, writing and processing ESM/ESP/ESS files.
homepage:            https://github.com/A1-Triard/tes3
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016 Warlock
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Tes3
                 , Data.Tes3.Native
                 , Data.Tes3.Get
                 , Data.Tes3.Get.Native
                 , Data.Tes3.Put
                 , Data.Tes3.Put.Native
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports 
  build-depends: base >= 4.7 && < 5
               , MissingH
               , base64-bytestring
               , binary
               , binary-ext
               , bytestring
               , containers
               , data-binary-ieee754
               , errors
               , monad-loops
               , mono-traversable
               , semigroups
               , split
               , text
               , transformers
               , utility-ht
               , utf8-string
               , zlib
  default-language: Haskell2010

test-suite tes3-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Tes3.Get.Spec
               , Data.Tes3.Spec
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base
               , HUnit
               , MissingH
               , base64-bytestring
               , binary
               , binary-ext
               , bytestring
               , containers
               , data-binary-ieee754
               , errors
               , monad-loops
               , mono-traversable
               , semigroups
               , split
               , tes3
               , text
               , transformers
               , utility-ht
               , utf8-string
               , zlib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/tes3.git
