name:                tes3
version:             0.12
synopsis:            A library for reading, writing and processing ESM/ESP/ESS files.
description:         A library for reading, writing and processing ESM/ESP/ESS files.
homepage:            https://github.com/A1-Triard/tes3
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016, 2017 Warlock <internalmike@gmail.com>
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Tes3
                 , Data.Tes3.Get
                 , Data.Tes3.Put
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fno-warn-unused-imports -fsimpl-tick-factor=110
  build-depends: base >= 4.7 && < 5
               , MissingH
               , base64-bytestring
               , binary
               , binary-ext >= 2.0
               , bytestring
               , conduit
               , conduit-combinators
               , containers
               , data-binary-ieee754
               , errors
               , monad-loops
               , mono-traversable
               , mtl
               , semigroups
               , split
               , text
               , transformers
               , utility-ht
               , utf8-string
               , zlib
  default-language: Haskell2010

test-suite tes3-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Tes3.Get.Spec
               , Data.Tes3.Spec
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  build-depends: base
               , HUnit
               , MissingH
               , base64-bytestring
               , binary
               , binary-ext >= 2.0
               , bytestring
               , conduit
               , conduit-combinators
               , containers
               , data-binary-ieee754
               , errors
               , monad-loops
               , mono-traversable
               , mtl
               , semigroups
               , split
               , tes3
               , text
               , transformers
               , utility-ht
               , utf8-string
               , zlib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=100000000 -O2 -Wall -Werror -fno-warn-unused-imports -fsimpl-tick-factor=110
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/tes3.git
